Another fix for overflow x

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,8 @@ html {
 }
 
 body {
+  position:relative;
+	overflow-x:hidden;
   font-family: "open-sans", sans-serif;
   font-weight: 400;
   margin: 0;
